# surch2

./: README.md  index.html  install.sh  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: surch2-toggle
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: apps.rs  clipboard.rs  db.rs  i3.rs  lib.rs  main.rs  models.rs  system.rs
