[package]
name = "surch2"
version = "0.1.0"
description = "A blazing-fast Raycast-inspired launcher for Linux"
authors = ["Rishabh Sharma"]
edition = "2021"

[lib]
name = "surch2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fuzzy-matcher = "0.3"
walkdir = "2"
dirs = "5"
freedesktop_entry_parser = "1"
glob = "0.3"
base64 = "0.22"
rusqlite = { version = "0.38.0", features = ["bundled"] }
arboard = "3.6.1"
